[package]
name = "ctf"
version = "0.1.0"
edition = "2021"

[lib]
name = "ctf"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
bevy = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.android]
package = "com.kglazier.ctf"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
min_sdk_version = 24
target_sdk_version = 34

[package.metadata.android.application]
label = "CTF Darts"

[[package.metadata.android.uses_feature]]
name = "android.hardware.touchscreen"
required = true

# Compile deps with optimizations even in dev — Bevy is painful otherwise.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
