[workspace]
members = [".", "android_net_bind"]

[package]
name = "space_boosters"
version = "0.1.0"
edition = "2021"

[lib]
name = "space_boosters"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
bevy = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
android_net_bind = { path = "android_net_bind" }
# Multiplayer (online): WebRTC P2P via matchbox + bincode for compact wire
# format. matchbox 0.10 targets bevy 0.14. The WebRTC crate it pulls in has
# native build requirements on Android — see android/build notes if cargo-ndk
# fails after this change. Solo play does not exercise this code.
bevy_matchbox = "0.10"
bincode = "1.3"
# Used by net_smoke_test.rs for the Phase 1 NDK-bind validation. Only
# net + a tiny current-thread runtime needed.
tokio = { version = "1", features = ["net", "rt", "macros", "io-util"] }

[package.metadata.android]
package = "com.kglazier.spaceboosters"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
min_sdk_version = 24
target_sdk_version = 34

[package.metadata.android.application]
label = "Space Boosters"

[[package.metadata.android.uses_feature]]
name = "android.hardware.touchscreen"
required = true

# Compile deps with optimizations even in dev — Bevy is painful otherwise.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
