[workspace]
members = [".", "android_net_bind"]

[package]
name = "space_boosters"
version = "0.1.0"
edition = "2021"

[lib]
name = "space_boosters"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Native + Android: keep bevy default features (audio, gilrs, multi-thread).
# Wasm overrides this in [target.'cfg(target_arch = "wasm32")'.dependencies]
# below to drop features that panic on wasm32-unknown-unknown.
bevy = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Multiplayer (online): WebRTC P2P via matchbox + bincode for compact wire
# format. matchbox 0.10 targets bevy 0.14. The WebRTC crate it pulls in has
# native build requirements on Android — see android/build notes if cargo-ndk
# fails after this change. Solo play does not exercise this code.
bevy_matchbox = "0.10"
bincode = "1.3"

# Native (desktop + Android) deps. tokio's `net` feature won't link on wasm32,
# and android_net_bind is JNI-only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
android_net_bind = { path = "android_net_bind" }
# Used by net_smoke_test.rs for the Phase 1 NDK-bind validation. Only
# net + a tiny current-thread runtime needed.
tokio = { version = "1", features = ["net", "rt", "macros", "io-util"] }

# web-time works on native AND wasm (calls Date.now() in the browser). std's
# SystemTime/Instant panic on wasm32-unknown-unknown.
[dependencies.web-time]
version = "1"

# Web (wasm32) deps.
[target.'cfg(target_arch = "wasm32")'.dependencies]
# Disable Bevy default features that call std::time::Instant on
# wasm32-unknown-unknown (panics) or aren't useful in the browser:
#   - multi_threaded: rayon scheduling, needs SharedArrayBuffer
#   - sysinfo_plugin: queries /proc, panics on wasm
#   - bevy_audio: cpal/rodio call Instant::now, panic on wasm
#   - bevy_gilrs: gamepad, no wasm backend in 0.14
#   - x11: linux-only window backend
#   - vorbis: audio codec, only useful with bevy_audio
bevy = { version = "0.14", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "png",
    "webgl2",
] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
# Force getrandom's wasm_js feature so the rng compiles on wasm32-unknown-unknown.
# Must match the rustflag in .cargo/config.toml.
getrandom = { version = "0.3", features = ["wasm_js"] }
# Bevy pulls in uuid; on wasm it needs an explicit rng source.
uuid = { version = "1", features = ["js"] }
# matchbox pulls futures-timer; without `wasm-bindgen` feature it calls
# std::time::Instant::now() which panics on wasm32-unknown-unknown.
futures-timer = { version = "3", features = ["wasm-bindgen"] }

[package.metadata.android]
package = "com.kglazier.spaceboosters"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
min_sdk_version = 24
target_sdk_version = 34

[package.metadata.android.application]
label = "Space Boosters"

[[package.metadata.android.uses_feature]]
name = "android.hardware.touchscreen"
required = true

# Compile deps with optimizations even in dev — Bevy is painful otherwise.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Aggressive size+speed optimization for the wasm bundle. Use via:
#   cargo build --profile release-wasm --target wasm32-unknown-unknown
[profile.release-wasm]
inherits = "release"
lto = "fat"
codegen-units = 1
# Speed > size for a 60fps action game. opt-level "z" was costing ~30%
# runtime perf vs "3" and only saving a few MB on the wire (which gzips
# anyway). Stay at 3.
opt-level = 3
strip = true

# Fast iteration profile for the wasm build — no LTO, no -Oz, so rebuilds
# after a code change finish in ~30s instead of 4-5min. Bigger bundle,
# slower runtime — fine for local testing. Use:
#   cargo build --profile dev-wasm --target wasm32-unknown-unknown --bin space_boosters
[profile.dev-wasm]
inherits = "release"
lto = false
codegen-units = 16
opt-level = 2
strip = false
debug = "line-tables-only"
